# alpha-quoridor

./: .gitignore  AGENTS.md  README.md  pyproject.toml  setup.py
configs/: bootstrap.yaml  default.yaml  profile.yaml  small.yaml  test.yaml
scripts/: benchmark_batch.py  bootstrap.py  eval.py  play.py  play_human.py  play_minimax.py  train.py  verify_minimax.py
src/: __init__.py
src/agent/: __init__.py  mcts_agent.py  minimax_agent.py  random_agent.py
src/game/: __init__.py  board.py  rules.py  rules_fast.pyi  rules_fast.pyx
src/mcts/: __init__.py  node.py  search.py
src/model/: __init__.py  network.py
src/training/: __init__.py  bootstrap_utils.py  buffer.py  reward_shaping.py  self_play.py  trainer.py
src/utils/: checkpoint.py  config.py
tests/agent/: test_agent.py
tests/game/: test_board.py  test_rules.py
tests/mcts/: test_search.py
tests/model/: test_canonical.py  test_network.py
tests/training/: test_bootstrap.py  test_buffer.py  test_repetition.py  test_reward_shaping.py
tests/utils/: test_config.py
