[build-system]
requires = ["setuptools>=68.0", "wheel", "numpy", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "alpha-quoridor"
version = "0.1.0"
description = "AlphaGo-style AI for Quoridor"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "ty>=0.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "RUF"]
ignore = ["E501", "N812"]

[tool.ty.environment]
python-version = "3.10"
